--- a/Views/Usuarios/Cadastro.cshtml
+++ b/Views/Usuarios/Cadastro.cshtml
@@ -40,19 +40,21 @@
                 </div>
             }
             <form asp-action="Cadastrar" method="post">
-                <label class="user-form" for="nome">Nome</label>
+                <label class="user-form" for="nome">Nome*:</label>
                 <input class="user-form" type="text" id="nome" name="nome" required />
 
-                <label for="email">E-mail</label>
+                <label for="email">E-mail*:</label>
                 <input type="email" id="email" name="email" required />
 
-                <label for="senha">Senha</label>
+                <label for="senha">Senha*:</label>
                 <input type="password" id="senha" name="senha" required />
 
                 <label for="nivel_acesso">Nível de Acesso</label>
                 <select id="nivel_acesso" name="nivel_acesso" required>
                     <option value="usuario">Usuário</option>
                 </select>
+
+                <p style="margin-top: 10px; font-size: 12px;">*Campos de preenchimento obrigatório</p>
 
                 <button type="submit">CADASTRAR</button>
             </form>
