--- a/Views/Usuarios/Login.cshtml
+++ b/Views/Usuarios/Login.cshtml
@@ -43,11 +43,13 @@
             }
 
             <form asp-action="Login" method="post">
-                <label class="login-form" for="email">E-mail</label>
+                <label class="login-form" for="email">E-mail*:</label>
                 <input class="login-form" type="email" id="email" name="email" required />
 
-                <label for="senha">Senha</label>
+                <label for="senha">Senha*:</label>
                 <input type="password" id="senha" name="senha" required />
+
+                <p style="margin-top: 10px; font-size: 12px;">*Campos de preenchimento obrigatório</p>
 
                 <button type="submit">ACESSAR</button>
             </form>
