Correção dos botões de cadastrar categoria e consultar estoque na tela Menu que estavam quebrados, bem como do rodapé da tela consultar estoque que estava faltando um botão

--- a/Views/Estoque/Consulta.cshtml
+++ b/Views/Estoque/Consulta.cshtml
@@ -85,8 +85,9 @@
         </div>
     </div>
 
-    <!-- Rodapé -->
+    <!-- RODAPÉ Fixo -->
     <footer class="menu-footer">
+        <a href="javascript:history.back()" class="footer-btn">&#8678 VOLTAR</a>
         <a href="/Home/Index" class="footer-btn">SAIR &#8680</a>
     </footer>
 
