--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -28,7 +28,9 @@
     <!-- Cabeçalho -->
     <header class="header">
         <div class="logo">
-            <img src="~/images/logo.jpg" alt="Logo PapelArt" />
+            <a asp-controller="Home" asp-action="Menu" title="Voltar ao Menu">
+                <img src="~/images/logo.jpg" alt="Logo PapelArt - Voltar ao Menu" />
+            </a>
         </div>
         <div class="titulo">
             <h1>PapelArt - Material Escolar</h1>
