--- a/Views/Produtos/Create.cshtml
+++ b/Views/Produtos/Create.cshtml
@@ -111,9 +111,9 @@
 
                 <div class="painel-links">
                     <a class="painel-link" href="/Categorias/Create">CADASTRAR CATEGORIA</a>
-                    <a class="painel-link" href="/Estoque/Index">CONSULTAR ESTOQUE</a>
-                    <a class="painel-link" href="/Relatorios/Index">GERAR RELATÓRIO</a>
+                    <a class="painel-link" href="/Estoque/Consulta">CONSULTAR ESTOQUE</a>
                     <a class="painel-link" href="/Movimentacoes/Create">REGISTRAR ENTRADA / SAÍDA</a>
+                    <a class="painel-link" href="/Relatorios/Create">GERAR RELATÓRIO</a>
                 </div>
             </div>
 
