--- a/Views/Categorias/Create.cshtml
+++ b/Views/Categorias/Create.cshtml
@@ -50,7 +50,7 @@
         <div class="cadastro-produto-container">
 
             <!-- FORMULÁRIO DE CATEGORIA -->
-            <form method="post" asp-action="Create" class="form-produto form-area">
+            <form method="post" asp-action="Create" class="form-area form-produto">
                 @Html.AntiForgeryToken()
 
                 <div class="linha">
@@ -80,9 +80,9 @@
 
                 <div class="painel-links">
                     <a class="painel-link" href="/Produtos/Create">CADASTRAR PRODUTO</a>
-                    <a class="painel-link" href="/Estoque/Index">CONSULTAR ESTOQUE</a>
-                    <a class="painel-link" href="/Relatorios/Index">GERAR RELATÓRIO</a>
+                    <a class="painel-link" href="/Estoque/Consulta">CONSULTAR ESTOQUE</a>
                     <a class="painel-link" href="/Movimentacoes/Create">REGISTRAR ENTRADA / SAÍDA</a>
+                    <a class="painel-link" href="/Relatorios/Create">GERAR RELATÓRIO</a>
                 </div>
             </div>
 
