Ajuste das telas de Cadastro de Produto, de Categoria e Registro de Entrada e Saída de Produto, identificando os campos de preenchimento obrigatório

--- a/Views/Categorias/Create.cshtml
+++ b/Views/Categorias/Create.cshtml
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="linha">
-                    <label>NOME:</label>
+                    <label>NOME*:</label>
                     <input asp-for="Nome" />
                     <span asp-validation-for="Nome" class="text-danger"></span>
                 </div>
@@ -70,6 +70,11 @@
                         <option value="">Nenhuma (Categoria principal)</option>
                     </select>
                 </div>
+
+                <p class="campos-obrigatorios">
+                    *Campos de preenchimento obrigatório
+                </p>
+
 
                 <button class="btn-cadastrar-produto" type="submit">CADASTRAR</button>
             </form>
