--- a/Views/Produtos/Create.cshtml
+++ b/Views/Produtos/Create.cshtml
@@ -58,25 +58,25 @@
 
                 <!-- NOME -->
                 <div class="linha">
-                    <label>NOME:</label>
+                    <label>NOME*:</label>
                     <input type="text" asp-for="Nome" class="form-control" required />
                 </div>
 
                 <!-- DESCRIÇÃO -->
                 <div class="linha">
-                    <label>DESCRIÇÃO:</label>
-                    <input type="text" asp-for="Descricao" class="form-control" />
+                    <label>DESCRIÇÃO*:</label>
+                    <input type="text" asp-for="Descricao" class="form-control" required/>
                 </div>
 
                 <!-- PREÇO -->
                 <div class="linha">
-                    <label>VALOR UNITÁRIO:</label>
-                    <input type="number" step="0.01" asp-for="Preco" class="form-control" required />
+                    <label>VALOR UNITÁRIO*:</label>
+                    <input type="number" step="0.01" asp-for="Preco" class="form-control" required/>
                 </div>
 
                 <!-- CATEGORIA -->
                 <div class="linha">
-                    <label>CATEGORIA:</label>
+                    <label>CATEGORIA*:</label>
 
                     <select asp-for="CategoriaId" class="form-control">
                         <option value="">Selecione...</option>
@@ -99,6 +99,11 @@
 
                     <span asp-validation-for="CategoriaId" class="text-danger"></span>
                 </div>
+
+                <p class="campos-obrigatorios">
+                    *Campos de preenchimento obrigatório
+                </p>
+
 
                 <!-- BOTÃO -->
                 <button class="btn-cadastrar-produto" type="submit">CADASTRAR</button>
