Implantação das telas para gerar e apresentar os relatórios, estilizando a tela de gerar relatórios, bem como realizando mais alguns ajustes gerais

--- a/Views/Categorias/Create.cshtml
+++ b/Views/Categorias/Create.cshtml
@@ -87,7 +87,7 @@
                     <a class="painel-link" href="/Produtos/Create">CADASTRAR PRODUTO</a>
                     <a class="painel-link" href="/Estoque/Consulta">CONSULTAR ESTOQUE</a>
                     <a class="painel-link" href="/Movimentacoes/Create">REGISTRAR ENTRADA / SAÍDA</a>
-                    <a class="painel-link" href="/Relatorios/Create">GERAR RELATÓRIO</a>
+                    <a class="painel-link" href="/Relatorios/Index">GERAR RELATÓRIO</a>
                 </div>
             </div>
 
