--- a/Views/Estoque/Resultados.cshtml
+++ b/Views/Estoque/Resultados.cshtml
@@ -93,11 +93,12 @@
         </a>
     </div>
 
-    <!-- Rodapé -->
+    <!-- RODAPÉ Fixo -->
     <footer class="menu-footer">
-        <a href="/Estoque/Consulta" class="footer-btn">&#8678 VOLTAR</a>
+        <a href="javascript:history.back()" class="footer-btn">&#8678 VOLTAR</a>
         <a href="/Home/Index" class="footer-btn">SAIR &#8680</a>
     </footer>
+
 
 </body>
 </html>
