--- a/Views/Movimentacoes/Create.cshtml
+++ b/Views/Movimentacoes/Create.cshtml
@@ -108,7 +108,7 @@
                     <a class="painel-link" href="/Produtos/Create">CADASTRAR PRODUTO</a>
                     <a class="painel-link" href="/Categorias/Create">CADASTRAR CATEGORIA</a>
                     <a class="painel-link" href="/Estoque/Consulta">CONSULTAR ESTOQUE</a>
-                    <a class="painel-link" href="/Relatorios/Create">GERAR RELATÓRIO</a>
+                    <a class="painel-link" href="/Relatorios/Index">GERAR RELATÓRIO</a>
                 </div>
             </div>
 
