--- a/Views/Estoque/Resultados.cshtml
+++ b/Views/Estoque/Resultados.cshtml
@@ -87,11 +87,32 @@
     </div>
 
     <!-- Botões -->
-     <div class="linha linha-botoes-horizontal">
+    <div class="linha linha-botoes-horizontal">
         <a href="/Estoque/Consulta" class="btn-cadastrar-produto btn-secundario">
             NOVA CONSULTA
         </a>
     </div>
+
+
+    <!-- Botões Rápidos -->
+    <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px; flex-wrap: wrap;">
+        <button class="painel-link" onclick="window.print()"
+            style="outline: none !important; border: none !important; font-family: Zen Maru Gothic, sans-serif; width: 200px;">
+            🖨️ IMPRIMIR
+        </button>
+        <button class="painel-link" onclick="exportToPDF()"
+            style="outline: none !important; border: none !important; font-family: Zen Maru Gothic, sans-serif; width: 200px;">
+            📄 SALVAR PDF
+        </button>
+        <a href="@Url.Action("Menu", "Home")" class="painel-link" style="width: 200px; text-align: center">🏠 MENU
+            PRINCIPAL</a>
+    </div>
+
+    <script>
+        function exportToPDF() {
+            window.print();
+        }
+    </script>
 
     <!-- RODAPÉ Fixo -->
     <footer class="menu-footer">
@@ -101,5 +122,5 @@
 
 
 </body>
-</html>
 
+</html>
